change heading huu-ich

--- a/huu-ich/cac-loai-bao-hiem-2.html
+++ b/huu-ich/cac-loai-bao-hiem-2.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Các loại bảo hiểm (2) (Trang web LHBội)</title>
+<title>Các loại bảo hiểm (2)</title>
 <meta name="description" content="Trang 2: Mục đích của bảo hiểm. Các loại bảo hiểm. Mỗi người nên tự trang bị bảo hiểm cho gia đình." />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân, bảo hiểm, bệnh, tai nạn">
 <link rel="alternate" href="https://www.lhboi.name.vn/huu-ich/cac-loai-bao-hiem-2">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,15 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-    <div class="title">Các loại bảo hiểm (2)</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -236,13 +230,14 @@ https://lehboi.github.io/huu-ich/cac-loai-bao-hiem/
     </amp-facebook-like>
   </div>
 
-    <h1>Mua bảo hiểm có <span class="red">lời</span> không?</h1>
+    <h1>Các loại bảo hiểm (2)</h1>
+    <h2>Mua bảo hiểm có <span class="red">lời</span> không?</h2>
     <p>Trừ loại <a href="cac-loai-bao-hiem/diem-tua-dau-tu">bảo hiểm liên kết đầu tư</a> có thể đem lại lợi nhuận cao, các loại bảo hiểm nhân thọ đều có <a href="hieu-qua-dau-tu">lãi tương đương gửi tiết kiệm ở ngân hàng</a>, người mua bảo hiểm chỉ có <span class="red">lời nhiều</span> khi gặp rủi ro. Khi gặp rủi ro thì người mua bảo hiểm nhận được một số tiền <span class="red">lớn hơn</span> số phí bảo hiểm đã nộp cho công ty bảo hiểm, gặp rủi ro càng sớm thì càng lời nhiều.<br>
 Chắc chắn là không ai <span class="red">muốn</span> lời theo cách này, nhưng mọi người đều <span class="red">cần</span> có bảo hiểm. Nhiều người vẫn chưa phân biệt được cái mình <span class="red">muốn</span> và cái mình <span class="red">cần</span>, người ta chỉ cố để có cái mình muốn chứ không cố kiếm cái mình cần. Ví dụ: người ta cần một cái điện thoại di động nhưng lại muốn có iPhone, cần có bảo hiểm nhưng không muốn mua.<br>
 Mua bảo hiểm cũng giống như <a href="/y-kien/bat-ca-hai-tay">bắt cá hai tay</a>.<br>
 Mặc dù lãi suất tương đương nhưng <a href="cac-loai-bao-hiem/bhnt-lien-ket-chung">gửi tiền vào bảo hiểm liên kết chung</a> một cách đều đặn liên tục sẽ cho kết quả tốt hơn gửi ngân hàng.</p>
 
-    <h1>Mỗi người nên mua bảo hiểm nào?</h1>
+    <h2>Mỗi người nên mua bảo hiểm nào?</h2>
     <p>Phần trên là tóm tắt về những sản phẩm bảo hiểm trên thị trường. Có nhiều sản phẩm như vậy thì nên mua thứ nào? Câu trả lời là không có một sản phẩm nào đáp ứng được hết mọi nhu cầu bảo hiểm của một người, phải lựa chọn các sản phẩm bổ sung cho nhau để có phạm vi bảo vệ nhiều nhất.<br>
 Việc chọn sản phẩm bảo hiểm bắt đầu từ <a href="ke-hoach-tai-chinh/">kế hoạch tài chính</a> của gia đình:</p>
     <ul>
@@ -276,7 +271,7 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-    <h2>Chi phí chữa bệnh, tai nạn</h2>
+    <h3>Chi phí chữa bệnh, tai nạn</h3>
     <p>Người xưa đã đúc kết quy luật của cuộc đời của đa số người là <b><a href="cau-chuyen/sinh-lao-benh-tu">Sinh-Lão-Bệnh-Tử</a></b>. Tử là điều xảy ra sau cùng nhưng không phải là điều đáng sợ nhất, điều đáng sợ nhất là Bệnh! Chữ Bệnh ở đây nói đến những bệnh tật và tai nạn nghiêm trọng. Bệnh mà không có tiền để chạy chữa thì đáng sợ hơn nữa, bệnh nhẹ không được chữa sớm sẽ trở thành bệnh nặng. Biết trước quy luật trên thì mỗi người đều phải để dành cho chính mình một khoản tiền để đối phó với Bệnh. Nếu để dành đều đặn thì đến khi Lão cũng đã có một số tiền lớn. Nhưng rất nhiều người <i>chưa kịp</i> Lão, chưa kịp để dành xong thì Bệnh đã đến, lúc đó có một số tiền bảo hiểm lớn thì tốt biết mấy!<br>
 Về bệnh tật và tai nạn thì người làm công đã có bảo hiểm y tế bắt buộc, người làm nghề tự do có thể mua bảo hiểm y tế tự nguyện. Tuy nhiên bảo hiểm y tế của nhà nước <i><span class="tmark">không chi trả đủ cho mọi thiệt hại</span></i>. Những thiệt hại không được chi trả như giảm sút thu nhập trong và sau khi điều trị thì người bệnh và gia đình vẫn phải tự chịu, chưa kể BHYT không chi trả 100% chi phí điều trị (phần lớn người tham gia BHYT nhà nước chỉ được trả 80% chi phí và mỗi lần không quá 40 tháng lương tối thiểu), hoặc thiệt hại nghiêm trọng hơn là qua đời hoặc mất khả năng lao động do bệnh tật, tai nạn.<br>
 Để bổ sung cho BHYT nhà nước thì có thể mua thêm:<p>
@@ -284,7 +279,7 @@ Về bệnh tật và tai nạn thì người làm công đã có bảo hiểm y
       <li> bảo hiểm chăm sóc sức khoẻ từ các công ty bảo hiểm, để bù đắp phần chi phí điều trị mà BH y tế nhà nước chưa trả hết</li>
       <li>bảo hiểm tai nạn và tử vong, bảo hiểm bệnh nghiêm trọng từ các công ty BH nhân thọ, để bù đắp thu nhập bị mất</li>
     </ul>
-    <h2>Mất nguồn thu nhập</h2>
+    <h3>Mất nguồn thu nhập</h3>
     <p>Nếu Tử đến sau Lão thì chẳng có gì đáng lo, lúc đó người ta đã làm xong những việc cần thiết nhất của cuộc đời như là mua nhà, nuôi con học thành tài. Đáng lo là những người gặp Tử khi chưa kịp làm xong những việc đó, không thể thanh thản ra đi vì không biết con mình sẽ ra sao.
     <br>Mỗi gia đình Nên có <span class="tmark">BH tử vong</span> với số tiền bằng tổng các khoản cần chi trong <a href="ke-hoach-tai-chinh/">kế hoạch tài chính</a> cộng với ít nhất 5 năm thu nhập của người làm ra tiền, nên mua BH tai nạn lớn hơn số tiền BH tử vong (vì tai nạn mà không tử vong thì thiệt hại có thể còn lớn hơn tử vong).<br>
 Các công ty BH nhân thọ có bán BH tử vong và BH tai nạn dưới dạng sản phẩm bổ trợ với mức phí <span class="tmark">rất thấp</span>, ví dụ BH tai nạn 100 triệu đồng chỉ cần đóng 200-400 ngàn đồng/năm tuỳ theo nghề nghiệp có nguy cơ thấp hay cao, BH tử vong 100 triệu đồng chỉ cần đóng 250 ngàn đồng/năm trở lên tuỳ theo tuổi. Gọi là sản phẩm bổ trợ là vì không có giá trị hoàn lại và phải mua kèm với một sản phẩm chính có số tiền bảo hiểm ít nhất bằng 20 hay 25% số tiền bảo hiểm của sản phẩm bổ trợ. Ví dụ: để có BH tai nạn 1 tỉ đồng thì mua kèm với sản phẩm chính 250 triệu đồng.</p>
