--- a/huu-ich/cac-loai-bao-hiem-3.html
+++ b/huu-ich/cac-loai-bao-hiem-3.html
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -140,6 +140,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 <script async custom-element="amp-youtube" src="https://cdn.ampproject.org/v0/amp-youtube-0.1.js"></script>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -211,15 +212,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-    <div class="title">Các loại bảo hiểm (3)</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -237,7 +231,8 @@ https://lehboi.github.io/huu-ich/cac-loai-bao-hiem/
     </amp-facebook-like>
   </div>
 
-    <h1>Bảo hiểm tốn bao nhiêu?</h1>
+    <h1>Các loại bảo hiểm (3)</h1>
+    <h2>Bảo hiểm tốn bao nhiêu?</h2>
     <p>Ví dụ: bạn muốn mua nhà sau 5 năm nữa, với lãi suất tiết kiệm 12%/năm thì bạn đang để dành mỗi tháng 12,25 triệu đồng để có 1 tỉ đồng vào lúc đó. Để bảo vệ kế hoạch đó trước rủi ro mất sớm hay tai nạn thì bạn cần có một số tiền bảo hiểm tử vong 550 triệu đồng và bảo hiểm tai nạn hơn 1,2 tỉ đồng với mức phí khoảng 3,7 triệu đồng/năm, khoảng 2% số tiền bạn tiết kiệm. <b>Chỉ tốn thêm 2%</b> để kế hoạch của bạn chắc chắn hơn trước những rủi ro. Bất kỳ lúc nào trong suốt 5 năm đó, nếu bạn không còn thì số tiền bảo hiểm nhận được đủ cho gia đình bạn có nhà đúng vào năm thứ 5.
     <br>Nếu bạn đang trả nợ góp thì cũng dùng bảo hiểm để bảo vệ kế hoạch trả nợ của bạn, thêm vài phần trăm để bảo đảm rằng món nợ được trả dù cho có chuyện gì xảy ra; đừng để người thân của bạn rơi vào tình trạng vừa mất đi thân nhân vừa gồng mình trả nợ.<br>
 Tương tự như vậy, nếu bạn dự định để dành 2,5 tỉ đồng cho con du học sau 15 năm nữa, mỗi tháng bạn để dành 5 triệu đồng. Để chắc chắn có số tiền 2,5 tỉ đồng đó đúng lúc dù cho lúc đó bạn không còn bên cạnh con mình, bạn cần số tiền bảo hiểm tử vong khoảng 470 triệu đồng và bảo hiểm tai nạn hơn 500 triệu đồng với mức phí khoảng 2,1 triệu đồng / năm, khoảng 3,5% số tiền bạn tiết kiệm.
@@ -302,7 +297,7 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-    <h1>Lời kết</h1>
+    <h2>Lời kết</h2>
     <p>Xin trích lời bài hát <b><a href="http://mp3.zing.vn/bai-hat/Neu-Nhu-Anh-Khong-Ve-Thanh-Thao/ZWZA7DWI.html" target='_blank'>Nếu như anh không về</a></b> để nhắc lại hình ảnh còn lại sau khi một người ra đi.</p>
     <blockquote>
     <p><i>Người rời xa để lại nỗi đau</i></p>
@@ -317,7 +312,7 @@ Lời bài hát tả hoàn cảnh đầy xúc động của một người sau k
     <div>Bạn hãy chuẩn bị tốt để có thể sẵn sàng ra đi mà để lại ít đau đớn nhất cho những người thân yêu của mình.</div>
 
     <div class="center">
-    <h4><a href="https://youtu.be/-S4iK3VH-ow" target ='_blank'>YouTube video</a></h4>
+    <h3><a href="https://youtu.be/-S4iK3VH-ow" target ='_blank'>YouTube video</a></h3>
     <amp-youtube
     data-videoid="-S4iK3VH-ow"
     layout="responsive"
