--- a/huu-ich/cach-dau-tu.html
+++ b/huu-ich/cach-dau-tu.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Những cách đầu tư (Trang web LHBội)</title>
+<title>Những cách đầu-tư (Trang web LHBội)</title>
 <meta name="description" content="Mỗi người đều cần phải biết đầu tư để gia tăng tài sản. Trước tiên cần phải phân biệt được những cách đầu tư, và đặc biệt là rủi ro và sự lừa đảo trong đầu tư." />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân, đầu tư, đầu cơ">
 <link rel="alternate" href="https://www.lhboi.name.vn/huu-ich/cach-dau-tu">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,16 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
 <div class="body">
-  <div class="title">Những cách đầu tư</div>
-  <div class="right">Viết lần đầu trong Tháng Sáu, 2013</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -237,9 +230,11 @@ https://lehboi.github.io/huu-ich/cach-dau-tu
     </amp-facebook-like>
   </div>
 
+  <h1>Những cách đầu-tư</h1>
+  <div class="right">Viết lần đầu trong Tháng Sáu, 2013</div>
   <p>Đầu tư là một cách gia tăng tài sản. Mọi người đều phải biết đầu tư. Người giàu có dư tiền thì đầu tư để duy trì sự giàu có. Người chưa giàu cần phải tiết kiệm để có tiền đầu tư sao cho có đủ tiền dùng cho những <a href="cau-chuyen/nhung-hon-da">kế hoạch tương lai</a>. Tuy nhiên chữ đầu tư được dùng trong rất nhiều cách, có những cách dùng sai gây hiểu lầm, làm cho nhiều người sợ đầu tư. Hãy cùng tìm hiểu các cách đó.</p>
 
-  <h1>Đầu tư</h1>
+  <h2>Đầu tư</h2>
   <dl>
     <dt><b>Đầu tư trực tiếp</b></dt>
     <dd>người có tiền đứng ra lập doanh nghiệp sản xuất/dịch vụ/thương mại, điều hành doanh nghiệp đó để đồng tiền được sinh sôi ra. Quy mô doanh nghiệp có thể từ nhỏ đến rất lớn. Hoạt động của doanh nghiệp có thể là sản xuất hàng hoá, cung cấp dịch vụ, thương mại (bán sỉ, bán lẻ), xây dựng, cho thuê.<br />
@@ -317,7 +312,7 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-  <h1>Đầu cơ</h1>
+  <h2>Đầu cơ</h2>
   <p>Ngoài các cách trên thì chữ đầu tư còn được dùng trong những trường hợp khác:</p>
   <dl>
     <dt>đầu tư lướt sóng</dt>
@@ -394,7 +389,7 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-  <h1>Lừa đảo</h1>
+  <h2>Lừa đảo</h2>
   <p>Chữ đầu tư còn được dùng để lừa những người thiếu thông tin như trường hợp <i>đầu tư đa cấp</i>. Người ta bị dụ đưa tiền cho một tổ chức nào đó để được trả lãi cao, và được khuyến khích mời thêm nhiều người nữa tham gia. Thực chất tiền vốn của người tham gia sau được lấy làm tiền lãi trả cho người tham gia trước. Đến một lúc nào đó, không còn người mới tham gia nữa thì hệ thống sụp đổ, những người tham gia sau cùng sẽ mất tiền. Hoặc nó thêm một kiểu khác tinh vi hơn là tạo <i>cổ phiếu ảo</i> để người ta tranh mua đẩy giá lên. Cổ phiếu ảo là cổ phiếu của những công ty không có thật ở một nước xa xôi nào đó, người mua chỉ biết tên công ty qua Internet, chưa hề thấy sản phẩm của công ty. Cũng có người biết rằng việc này là rủi ro nhưng vẫn đưa tiền vào với hy vọng hệ thống không sụp đổ trước khi mình thu đủ vốn.
   <br>Trường hợp này là kiếm tiền bằng cách lừa gạt người khác chứ không phải từ sự biến động của thị trường. Hai ví dụ cho loại lừa đảo này ở Việt Nam là <a href="http://vnexpress.net/tin-tuc/phap-luat/nan-nhan-colony-invest-dau-kho-vi-cu-lua-ngoan-muc-2093007.html" target="_blank">Colony Invest</a> và <a href="http://web.archive.org/web/20120928103738/http://sgtt.vn/Kinh-te/168655/Kinh-doanh-co-phieu-truc-tuyen-tro-choi-mao-hiem.html" target="_blank">UInvest</a></p>
   <p>Để tránh rủi ro thì phải tìm hiểu kỹ xem tiền của mình sẽ đi đến đâu trước khi đưa tiền cho ai đó.</p>
