--- a/huu-ich/de-tien-vao-dau-2.html
+++ b/huu-ich/de-tien-vao-dau-2.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Để tiền vào đâu (2) (Trang web LHBội)</title>
+<title>Để tiền vào đâu (2)</title>
 <meta name="description" content="Trang 2: Để tiền vào đâu khi lãi suất tiết kiệm giảm: bất động sản và cổ phiếu" />
-<meta name="keywords" content="hữu ích, tài chính, cá nhân, lãi suất">
+<meta name="keywords" content="hữu-ích, tài-chính, cá-nhân, lãi-suất">
 <link rel="alternate" href="https://www.lhboi.name.vn/huu-ich/de-tien-vao-dau-2">
 <link rel="canonical" href="https://lehboi.github.io/huu-ich/de-tien-vao-dau-2">
 
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,15 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
 <div class="body">
-  <div class="title">Để tiền vào đâu (2)</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -236,7 +230,8 @@ https://lehboi.github.io/huu-ich/de-tien-vao-dau
     </amp-facebook-like>
   </div>
 
-  <h3>Thực tế</h3>
+  <h1>Để tiền vào đâu (2)</h1>
+  <h2>Thực tế</h2>
   <p>Phần tiếp theo là kinh nghiệm thực tế của tôi để đối chiếu với những điều trên.<br>
   Tôi bắt đầu tham gia thị trường chứng khoán từ năm 2003, cho tới nay tôi vẫn tự xem mình không có đủ kiến thức về thị trường chứng khoán, nhưng tôi không chạy theo đám đông và không dùng vốn vay.
   <br>Tôi bắt đầu mua cổ phiếu CII từ năm 2002, giữ nguyên số lượng cổ phiếu đến khi CII lên sàn. Năm 2006 thì tôi bán gần hết để dùng tiền vào việc khác, lời 185%, từ 50 triệu đồng thu lại hơn 140 triệu đồng. Thời gian 2003-2006, tôi chỉ đưa thêm một ít tiền vào cổ phiếu trên sàn, mặc dù không chạy theo đám đông nhưng cũng không ít lần tâm lý dao động nên mua bán không đúng lúc và mua phải những cổ phiếu không tốt, đến năm 2006 thì tôi bán gần hết để dùng tiền vào việc khác. Kết quả của giai đoạn này lời khoảng 77%.
