--- a/huu-ich/de-tien-vao-dau-3.html
+++ b/huu-ich/de-tien-vao-dau-3.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Để tiền vào đâu (3) (Trang web LHBội)</title>
+<title>Để tiền vào đâu (3)</title>
 <meta name="description" content="Trang 3: Để tiền vào đâu khi lãi suất tiết kiệm giảm: bất động sản và cổ phiếu" />
-<meta name="keywords" content="hữu ích, tài chính, cá nhân, lãi suất, đầu tư">
+<meta name="keywords" content="hữu-ích, tài-chính, cá-nhân, lãi-suất">
 <link rel="alternate" href="https://www.lhboi.name.vn/huu-ich/de-tien-vao-dau-3">
 <link rel="canonical" href="https://lehboi.github.io/huu-ich/de-tien-vao-dau-3">
 
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,15 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
 <div class="body">
-  <div class="title">Để tiền vào đâu (3)</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -236,7 +230,8 @@ https://lehboi.github.io/huu-ich/de-tien-vao-dau
     </amp-facebook-like>
   </div>
 
-  <h3>Có nên đưa tiền vào thị trường chứng khoán Việt Nam lúc này không?</h3>
+  <h1>Để tiền vào đâu (3)</h1>
+  <h2>Có nên đưa tiền vào thị trường chứng khoán Việt Nam lúc này không?</h2>
   <p>Mọi người đều muốn đưa tiền vào thị trường chứng khoán lúc giá cổ phiếu thấp nhất rồi nhìn nó lên giá. Nhưng bạn có biết chính xác lúc nào giá thấp nhất không? Nếu không biết thì hãy dùng phương pháp <a href="dau-tu-co-phieu/">bình quân giá cổ phiếu</a> để đưa tiền vào đầu tư thay vì ngồi đợi giá xuống thêm, lỡ giá không xuống thêm mà tăng lên thì có uổng không! Tham gia đầu tư định kỳ vào quỹ đầu tư là làm theo phương pháp bình quân giá cổ phiếu đó. Giá cổ phiếu có xuống, bạn lỗ ít hơn là đưa hết một đống tiền vào ngay một lúc. Giá cổ phiếu không tăng, bạn không bị lỗ.
   <br>Tham gia <b>quỹ đầu tư</b> giống như là bạn mở một doanh nghiệp <i>kinh doanh đa ngành</i> mà:</p>
   <ul>
