--- a/huu-ich/de-tien-vao-dau.html
+++ b/huu-ich/de-tien-vao-dau.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Để tiền vào đâu (Trang web LHBội)</title>
+<title>Để tiền vào đâu</title>
 <meta name="description" content="Để tiền vào đâu khi lãi suất tiết kiệm giảm: bất động sản và cổ phiếu" />
-<meta name="keywords" content="hữu ích, tài chính, cá nhân, lãi suất">
+<meta name="keywords" content="hữu-ích, tài-chính, cá-nhân, lãi-suất">
 <link rel="alternate" href="https://www.lhboi.name.vn/huu-ich/de-tien-vao-dau">
 <link rel="canonical" href="https://lehboi.github.io/huu-ich/de-tien-vao-dau">
 
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,16 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
 <div class="body">
-  <div class="title">Để tiền vào đâu</div>
-  <div class="right">Viết lần đầu trong Tháng Sáu, 2012.</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -237,6 +230,8 @@ https://lehboi.github.io/huu-ich/de-tien-vao-dau
     </amp-facebook-like>
   </div>
 
+  <h1>Để tiền vào đâu</h1>
+  <div class="right">Viết lần đầu trong Tháng Sáu, 2012.</div>
   <p>Hẳn là những người có tiền tiết kiệm đang băn khoăn không biết sắp tới nên đưa tiền vào đâu trong tình hình lãi suất huy động vốn ở ngân hàng đang giảm dần.
   <br>Những người chưa có tiền tiết kiệm thì nên đọc bài <a href="tich-luy">tại sao cần phải tiết kiệm</a>.</p>
 <!-- AMP In-article 1 -->
@@ -265,7 +260,7 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-  <h3>Lý thuyết</h3>
+  <h2>Lý thuyết</h2>
   <div class="flright">
     <div class="right">Hình từ <a href="https://www.dreamstime.com/lngoc25_info" target='_blank'>dreamstime.com</a></div>
     <amp-img alt="Investment growth wealth gold coins chart" src="/images/goldcoingrow.jpg" width="400" height="400" layout="responsive"></amp-img>
