--- a/huu-ich/index.html
+++ b/huu-ich/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Kiến-thức hữu-ích từ Trang-web LHBội</title>
+<title>Những kiến-thức hữu-ích cho mọi-người</title>
 <meta name="description" content="Kiến-thức hữu-ích về tài-chính-gia-đình: cách lập kế-hoạch-tài-chính để ổn-định cuộc-sống, cách đầu-tư để gia-tăng tài-sản, bảo-vệ tài-sản trước những rủi-ro." />
 <meta name="keywords" content="hữu-ích, tài-chính, cá-nhân">
 <link rel="alternate" href="https://www.lhboi.name.vn/huu-ich/">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,15 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
 <div class="body">
-  <div class="title">Những kiến-thức hữu-ích cho mọi-người</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -237,7 +231,8 @@ https://lehboi.github.io/huu-ich/
   </div>
 
 <!-- body here -->
-  <h1>Ổn-định cuộc-sống và làm-giàu một cách chắc-chắn</h1>
+  <h1>Những kiến-thức hữu-ích cho mọi-người</h1>
+  <h2>Ổn-định cuộc-sống và làm-giàu một cách chắc-chắn</h2>
   <div class="flright"><amp-img alt="Tự-do Tài-chính" src="/images/freedom1.jpg" width="282" height="172" layout="responsive"></amp-img></div>
   <p>Mọi-người đều cần và có-thể làm-giàu một cách chắc-chắn và dễ-dàng. Mỗi-người cần phải đủ giàu để có-thể <a href="tich-luy">ăn-xài suốt 30 năm cuối đời</a> mà không cần phải làm-việc để kiếm-tiến, lúc đó có muốn làm cũng không có đủ sức mà làm.
   <br>Chúng-ta nên hiểu rõ thế-nào là giàu và từ-đó khẳng-định <a href="lam-giau-khong-kho">làm-giàu không khó</a>.</p>
@@ -251,7 +246,7 @@ https://lehboi.github.io/huu-ich/
   <p>Bên-cạnh việc tích-luỹ làm gia-tăng tài-sản mỗi-người còn phải <a href="cac-loai-bao-hiem/">bảo-vệ</a> tài-sản đó trước những việc bất-ngờ không-mong-muốn.</p>
   <p>Tất-cả những việc trên có-thể được đưa vào một <a href="ke-hoach-tai-chinh/">kế-hoạch</a> rõ-ràng nhờ phần-mềm-máy-tính.</p>
 
-  <h1>Các bài khác trong cùng mục này</h1>
+  <h2>Các bài khác trong cùng mục này</h2>
   <ul>
     <li>Lập <a href="ke-hoach-tai-chinh/">kế-hoạch-tài-chính</a> trọn-đời</li>
     <li>So-sánh <a href="tich-luy-dai-han">các công-cụ tích-luỹ dài-hạn</a></li>
