--- a/huu-ich/lam-giau-khong-kho.html
+++ b/huu-ich/lam-giau-khong-kho.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Làm giàu không khó (Trang web LHBội)</title>
+<title>Làm giàu không khó</title>
 <meta name="description" content="Định nghĩa về giàu có tính tương đối. Có nhiều mức độ giàu. Làm thế nào để giàu." />
 <meta name="keywords" content="hữu ích, làm giàu, đầu tư">
 <link rel="alternate" href="https://www.lhboi.name.vn/huu-ich/lam-giau-khong-kho">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,16 +211,9 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
 
 
 <div class="body">
-  <div class="title">Làm giàu không khó</div>
-  <div class="right">Viết lần đầu trong Tháng Mười, 2014</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -237,6 +231,8 @@ https://lehboi.github.io/huu-ich/lam-giau-khong-kho
     </amp-facebook-like>
   </div>
 
+  <h1>Làm giàu không khó</h1>
+  <div class="right">Viết lần đầu trong Tháng Mười, 2014</div>
   <p>Có lẽ các bạn đã từng nghe đâu đó rằng <i>làm giàu không khó</i>.</p>
   <p>Nhiều bạn cũng đã tìm hiểu kỹ hoặc thử làm theo những hướng dẫn đó, và đã rút ra kết luận rằng "đối với đa số thì <i>làm giàu không dễ</i>, nếu dễ thì đã có rất nhiều người giàu". Nào là phải thay đổi phong cách, phải xây dựng các mối quan hệ, phải tìm cơ hội, và cuối cùng là chờ may mắn xảy ra. Nếu may mắn không xảy ra thì những cố gắng trước đó chẳng đem lại gì, thậm chí còn có thể gây tốn kém hơn tức là làm túi tiền của bạn nhẹ bớt đi. Vậy mà nói làm giàu không khó!</p>
   <p>Bây giờ, chúng ta cùng định nghĩa xem <i>thế nào là giàu</i> trước khi tìm hiểu tiếp <i>làm thế nào để giàu</i>.
