--- a/huu-ich/tien-thuong-cuoi-nam.html
+++ b/huu-ich/tien-thuong-cuoi-nam.html
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,16 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
 <div class="body">
-  <div class="title">Tiền thưởng cuối năm</div>
-  <div class="right">Viết lần đầu trong Tháng Giêng, 2014</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -237,15 +230,17 @@ https://lehboi.github.io/huu-ich/tien-thuong-cuoi-nam
     </amp-facebook-like>
   </div>
 
+  <h1>Tiền thưởng cuối năm</h1>
+  <div class="right">Viết lần đầu trong Tháng Giêng, 2014</div>
   <p>Bài này giới thiệu một cách dùng tiền thưởng cuối năm cho có lợi.</p>
-  <h3>Những vấn đề</h3>
-  <h4>Vấn đề của người lao động</h4>
+  <h2>Những vấn đề</h2>
+  <h3>Vấn đề của người lao động</h3>
   <ul>
     <li>Số người được lãnh lương hưu ít</li>
     <li>Lương hưu rất thấp so với thu nhập khi đi làm</li>
     <li>Rất nhiều người lao động nhận được một khoản thưởng Tết xấp xỉ 10% thu nhập cả năm hoặc hơn nữa, nhưng hầu như những khoản thưởng Tết từ vài chục triệu đồng trở xuống đều bị nhanh chóng tiêu hết vào những khoản không quan trọng như ăn Tết, mua sắm xe, ti-vi, điện thoại…</li>
   </ul>
-  <h4>Vấn đề của doanh nghiệp</h4>
+  <h3>Vấn đề của doanh nghiệp</h3>
   <ul>
     <li>Trong khi đó nhiều doanh nghiệp gặp một áp lực chi tiền mặt rất lớn khi sắp đến Tết, gần như phải chi hai tháng lương cùng lúc.</li>
     <li>Một số nhân viên chọn thời điểm sau Tết để đổi chỗ làm, doanh nghiệp lại tốn thêm chi phí tuyển và đào tạo nhân viên mới.</li>
@@ -276,7 +271,7 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-  <h3>Nguyên nhân</h3>
+  <h2>Nguyên nhân</h2>
   <ul>
     <li>Đa số dân chúng không quan tâm đến cuộc sống khi về già, vẫn còn ỷ lại vào truyền thống Trẻ cậy cha, già cậy con, nên không chú ý chuẩn bị quỹ hưu trí.</li>
     <li>Những người có hợp đồng lao động, được đóng bảo hiểm xã hội đều đặn cũng ít để ý xem mình đang được đóng bảo hiểm xã hội ở mức nào, cứ yên tâm rằng sau này chắc chắn có lương hưu mà không biết lương hưu cao hay thấp.</li>
@@ -316,7 +311,7 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-  <h3>Giải pháp</h3>
+  <h2>Giải pháp</h2>
   <p>Giải pháp không tốn kém sau đây sẽ đem lại nhiều lợi ích cùng lúc cho doanh nghiệp và người lao động.
   <br>Mỗi người chắc chắn có một khoản lương hưu của riêng mình ngoài lương hưu từ BHXH. Mỗi người tự kiểm soát quỹ lương hưu của riêng mình.
   <br>Để tập cho người lao động quen với việc tự chuẩn bị lương hưu cho mình, doanh nghiệp bắt đầu tạo cho mỗi người lao động một tài khoản hưu trí tự nguyện nhỏ và khuyến khích người lao động tự để dành thêm vào tài khoản bằng hình thức thưởng. Tất cả chi phí cho việc này chỉ chiếm một phần ngân sách khen thưởng của doanh nghiệp.
@@ -326,7 +321,7 @@ data-ad-slot="3830899615">
     <li>phần thưởng tiền mặt trước Tết</li>
     <li>phần thưởng vào quỹ hưu trí tự nguyện tỉ lệ với mức tiết kiệm của mỗi nhân viên</li>
   </ol>
-  <h4>Một ví dụ của việc tạo tài khoản hưu trí</h4>
+  <h3>Một ví dụ của việc tạo tài khoản hưu trí</h3>
   <p>Mỗi năm doanh nghiệp đóng vào tài khoản hưu trí tự nguyện cho mỗi người lao động có thâm niên từ ba năm trở lên một số tiền cơ bản, tỉ lệ với mức lương (từ 700 ngàn đồng / người / năm trở lên là được), hàng tháng người lao động tự đóng thêm vào tài khoản hưu trí tự nguyện một số tiền theo khả năng tiết kiệm, cuối năm doanh nghiệp sẽ thưởng thêm cho những người đã tự đóng thêm trong năm theo công thức:</p>
   <div class="center"><b>Tiền&#8209;doanh&#8209;nghiệp&#8209;thưởng&#8209;thêm = Hệ&#8209;số&#8209;thưởng * Hệ&#8209;số&#8209;tương&#8209;lai * Tổng&#8209;tiền&#8209;tự&#8209;đóng&#8209;trong&#8209;năm * (Tổng&#8209;tiền&#8209;tự&#8209;đóng&#8209;trong&#8209;năm / Lương&#8209;tháng)</b></div>
   <p>Ngoài khoản tiền thưởng vào tài khoản hưu trí tự nguyện đó, mỗi người lao động đều nhận được một khoản thưởng Tết bằng tiền mặt trị giá bằng <b>Hệ-số-thưởng * Lương-tháng</b>.
@@ -514,7 +509,7 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-  <h3>Lợi ích</h3>
+  <h2>Lợi ích</h2>
   <ul>
     <li>Giảm tỉ lệ bỏ việc của người lao động giúp doanh nghiệp giảm chi phí đào tạo người lao động.</li>
     <li>Giảm áp lực tiền mặt của doanh nghiệp vào thời điểm thưởng cuối năm: khoản đóng đều mỗi năm có thể chia ra đóng hàng tháng, hàng quý hay nửa năm một lần, khoản thưởng khuyến khích tiết kiệm có thể chia ra đóng vào bất kỳ thời điểm nào thuận tiện trong năm. Giảm áp lực tiền mặt giúp giảm chi phí tài chính của doanh nghiệp. </li>
@@ -556,10 +551,10 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-  <h3>So sánh hưu trí tự nguyện với bảo hiểm xã hội bắt buộc</h3>
-  <h4>Điểm giống nhau</h4>
+  <h2>So sánh hưu trí tự nguyện với bảo hiểm xã hội bắt buộc</h2>
+  <h3>Điểm giống nhau</h3>
   <p>Tiền gửi vào chỉ được nhận lại khi về hưu</p>
-  <h4>Điểm khác nhau</h4>
+  <h3>Điểm khác nhau</h3>
   <table class="withborder">
   <tbody>
   <tr>
