--- a/huu-ich/cac-giai-doan.html
+++ b/huu-ich/cac-giai-doan.html
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,15 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
 <div class="body">
-  <div class="title">Các giai đoạn của cuộc đời</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -236,6 +230,7 @@ https://lehboi.github.io/huu-ich/cac-giai-doan
     </amp-facebook-like>
   </div>
 
+  <h1>Các giai đoạn của cuộc đời</h1>
   Cuộc đời mỗi người trải qua các giai đoạn khác nhau từ trẻ tới già. Trong mỗi giai đoạn khác nhau người ta có những trách nhiệm khác nhau. Nhìn chung thì sẽ có các giai đoạn sau đây:
   <table class=withborder">
   <tbody>
