--- a/huu-ich/hieu-qua-dau-tu.html
+++ b/huu-ich/hieu-qua-dau-tu.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Tính hiệu quả của việc đầu tư (Trang web LHBội)</title>
+<title>Tính hiệu-quả của việc đầu-tư</title>
 <meta name="description" content="Khi đầu tư thì cần phải tính hiệu quả của việc đầu tư. Nên so sánh hiệu quả giữa các việc đầu tư khác nhau để chọn việc nào có hiệu quả cao hơn." />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân, đầu tư, cổ phiếu, bất động sản">
 <link rel="alternate" href="https://www.lhboi.name.vn/huu-ich/hieu-qua-dau-tu">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,15 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
 
 <div class="body">
-  <div class="title">Tính hiệu quả của việc đầu tư</div>
-  <div class="right">Viết lần đầu trong Tháng Giêng, 2018</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -236,6 +230,9 @@ https://lehboi.github.io/huu-ich/hieu-qua-dau-tu
     </amp-facebook-like>
   </div>
 
+  <h1>Tính hiệu-quả của việc đầu-tư</h1>
+  <div class="right">Viết lần đầu trong Tháng Giêng, 2018</div>
+  <h2>Hiệu-quả của việc đầu-tư tính như thế nào?</h2>
   <div class="flright">
     <div class="right">Hình từ <a href="https://www.dreamstime.com/lngoc25_info" target='_blank'>dreamstime.com</a></div>
     <amp-img alt="Investment growth wealth gold coins chart" src="/images/goldcoingrow.jpg" width="400" height="400" layout="responsive"></amp-img>
