--- a/huu-ich/tich-luy-dai-han-3.html
+++ b/huu-ich/tich-luy-dai-han-3.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>So sánh công cụ tích luỹ dài hạn (3) (Trang web LHBội)</title>
+<title>So-sánh công-cụ tích-luỹ dài-hạn (3)</title>
 <meta name="description" content="Trang 3: So sánh các công cụ tích luỹ dài hạn: vàng, ngoại tệ, nhà-đất, ngân hàng, cổ phiếu. Các tính chất chống trượt giá, an toàn, thanh khoản của các công cụ trên." />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân, tích luỹ, dài hạn, vàng, đô-la, bất động sản, quỹ đầu tư, sổ tiết kiệm">
 <link rel="alternate" href="https://www.lhboi.name.vn/huu-ich/tich-luy-dai-han-3">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,15 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
 <div class="body">
-  <div class="title">So sánh công cụ tích luỹ dài hạn (3)</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
