--- a/huu-ich/tich-luy-dai-han.html
+++ b/huu-ich/tich-luy-dai-han.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>So sánh công cụ tích luỹ dài hạn (Trang web LHBội)</title>
+<title>So-sánh công-cụ tích-luỹ dài-hạn</title>
 <meta name="description" content="So sánh các công cụ tích luỹ dài hạn: vàng, ngoại tệ, nhà-đất, ngân hàng, cổ phiếu. Các tính chất chống trượt giá, an toàn, thanh khoản của các công cụ trên." />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân, tích luỹ, dài hạn, vàng, đô-la, bất động sản, quỹ đầu tư, sổ tiết kiệm">
 <link rel="alternate" href="https://www.lhboi.name.vn/huu-ich/tich-luy-dai-han">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,16 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
 <div class="body">
-  <div class="title">So sánh công cụ tích luỹ dài hạn</div>
-  <div class="right">Viết lần đầu trong Tháng Bảy, 2013.</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -237,6 +230,8 @@ https://lehboi.github.io/huu-ich/tich-luy-dai-han
     </amp-facebook-like>
   </div>
 
+  <h1>So-sánh công-cụ tích-luỹ dài-hạn</h1>
+  <div class="right">Viết lần đầu trong Tháng Bảy, 2013.</div>
   <p>Khi chọn một công cụ giữ tiền dài hạn ta phải cân nhắc những yếu tố: trượt giá, an toàn, thanh khoản.</p>
   <h2>Trượt giá</h2>
   <p>Hầu như ai cũng lo ngại vấn đề trượt giá khi để dành tiền. Trượt giá là một điều khách quan ta phải chấp nhận. Dù muốn hay không ta cũng phải chấp nhận vật giá năm sau cao hơn năm trước không nhiều thì ít. Nếu hôm nay một tô phở giá 50.000 đồng, mười năm sau một tô phở có thể lên đến 100.000 đồng. Như vậy ta phải để dành thứ gì đó mà hôm nay đổi được mười tô phở thì 10-30 năm sau phải đổi được ít nhất mười tô phở. Tại sao phải để dành lâu như vậy thì được giải thích ở <a href="tich-luy">trang này</a>.</p>
