--- a/huu-ich/tich-luy.html
+++ b/huu-ich/tich-luy.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Tích luỹ tài sản</title>
+<title>Tích-luỹ tài-sản</title>
 <meta name="description" content="Mỗi người đều phải có một số tiền rất lớn để dùng khi về già. Cách chắc chắn nhất để có số tiền đó là tích luỹ từ sớm." />
 <meta name="keywords" content="hữu ích, tài chính, tích luỹ, hưu trí, tuổi già">
 <link rel="alternate" href="https://www.lhboi.name.vn/huu-ich/tich-luy">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,16 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
 <div class="body">
-  <div class="title">Tích luỹ tài sản</div>
-  <div class="right">Viết lần đầu trong Tháng Mười Một, 2012</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -237,6 +230,8 @@ https://lehboi.github.io/huu-ich/tich-luy
     </amp-facebook-like>
   </div>
 
+  <h1>Tích-luỹ tài-sản</h1>
+  <div class="right">Viết lần đầu trong Tháng Mười Một, 2012</div>
   <div class="flright"><div class="right">Hình từ <a href="https://www.dreamstime.com/lngoc25_info" target='_blank'>dreamstime.com</a></div><amp-img alt="Không dễ để có đủ tiền sống khi về già!" src="/images/retirementLadder.jpg" width="400" height="400" layout="responsive"></amp-img></div>
   <p>Xã hội Việt Nam có truyền thống "Trẻ cậy cha, già cậy con". Khi còn nhỏ thì được cha mẹ nuôi nấng, chu cấp cho ăn học; đến khi trưởng thành thì chu cấp trở lại cho cha mẹ già.</p>
   <p>Truyền thống đó đang bị thay đổi. Có nhiều nguyên nhân của sự thay đổi đó; mỗi người có thể nghĩ ra vài nguyên nhân, không biết nguyên nhân nào là đúng nhất. Nhưng hậu quả của sự thay đổi đó thì rất rõ ràng: <i>70% số người cao tuổi ở Việt Nam vẫn phải <a href="http://web.archive.org/web/20130731094951/http://t5g.org.vn/?u=dt&amp;id=3026" target="_blank">làm việc để kiếm sống</a></i>. Một số ít người già còn may mắn nhờ cậy được con thì cũng có thể mang mặc cảm lệ thuộc, trở thành gánh nặng của con. Một số trường hợp thật sự là gánh nặng: một cặp vợ chồng trẻ kiếm tiền để nuôi 8 miệng ăn: cha mẹ + hai con + tứ thân phụ mẫu.</p>
